--- a/public/output.css
+++ b/public/output.css
@@ -739,6 +739,10 @@ video {
   margin-top: 1.5rem;
 }
 
+.block {
+  display: block;
+}
+
 .flex {
   display: flex;
 }
@@ -1087,6 +1091,18 @@ video {
   border-width: 1px;
 }
 
+.border-\[2px\] {
+  border-width: 2px;
+}
+
+.border-\[0px\] {
+  border-width: 0px;
+}
+
+.border-\[3px\] {
+  border-width: 3px;
+}
+
 .border-b-\[2px\] {
   border-bottom-width: 2px;
 }
@@ -1431,6 +1447,30 @@ video {
 
 .underline-offset-\[-5px\] {
   text-underline-offset: -5px;
+}
+
+.opacity-50 {
+  opacity: 0.5;
+}
+
+.opacity-70 {
+  opacity: 0.7;
+}
+
+.opacity-20 {
+  opacity: 0.2;
+}
+
+.opacity-30 {
+  opacity: 0.3;
+}
+
+.opacity-40 {
+  opacity: 0.4;
+}
+
+.opacity-100 {
+  opacity: 1;
 }
 
 .shadow-xl {
