--- a/public/output.css
+++ b/public/output.css
@@ -549,6 +549,10 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.fixed {
+  position: fixed;
+}
+
 .absolute {
   position: absolute;
 }
@@ -557,89 +561,76 @@ video {
   position: relative;
 }
 
-.bottom-\[20px\] {
-  bottom: 20px;
-}
-
-.bottom-\[5px\] {
-  bottom: 5px;
-}
-
-.bottom-\[10px\] {
-  bottom: 10px;
-}
-
 .bottom-0 {
   bottom: 0px;
-}
-
-.right-0 {
-  right: 0px;
 }
 
 .right-\[-50px\] {
   right: -50px;
 }
 
-.top-\[100px\] {
-  top: 100px;
-}
-
-.top-\[800px\] {
-  top: 800px;
-}
-
-.top-\[80px\] {
-  top: 80px;
-}
-
-.right-\[-30px\] {
-  right: -30px;
-}
-
 .top-\[90px\] {
   top: 90px;
 }
 
-.z-10 {
-  z-index: 10;
+.bottom-\[10px\] {
+  bottom: 10px;
 }
 
-.z-\[1\] {
-  z-index: 1;
+.top-0 {
+  top: 0px;
 }
 
-.z-\[999\] {
-  z-index: 999;
+.left-0 {
+  left: 0px;
+}
+
+.top-\[100px\] {
+  top: 100px;
+}
+
+.right-\[50\%\] {
+  right: 50%;
+}
+
+.top-\[60px\] {
+  top: 60px;
+}
+
+.top-\[50\%\] {
+  top: 50%;
+}
+
+.right-0 {
+  right: 0px;
+}
+
+.top-\[40\%\] {
+  top: 40%;
+}
+
+.left-\[-20px\] {
+  left: -20px;
+}
+
+.right-\[-20px\] {
+  right: -20px;
 }
 
 .z-20 {
   z-index: 20;
 }
 
-.z-40 {
-  z-index: 40;
-}
-
-.z-\[0\] {
-  z-index: 0;
+.z-50 {
+  z-index: 50;
 }
 
 .z-\[100\] {
   z-index: 100;
 }
 
-.z-\[50\] {
-  z-index: 50;
-}
-
-.z-50 {
-  z-index: 50;
-}
-
-.my-4 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+.float-right {
+  float: right;
 }
 
 .mx-auto {
@@ -647,12 +638,8 @@ video {
   margin-right: auto;
 }
 
-.mr-\[20\%\] {
-  margin-right: 20%;
-}
-
-.mr-\[5\%\] {
-  margin-right: 5%;
+.mt-6 {
+  margin-top: 1.5rem;
 }
 
 .mr-\[8\%\] {
@@ -663,32 +650,8 @@ video {
   margin-right: auto;
 }
 
-.mr-2 {
-  margin-right: 0.5rem;
-}
-
-.mr-6 {
-  margin-right: 1.5rem;
-}
-
-.mr-8 {
-  margin-right: 2rem;
-}
-
-.mr-12 {
-  margin-right: 3rem;
-}
-
 .mr-10 {
   margin-right: 2.5rem;
-}
-
-.mb-\[20px\] {
-  margin-bottom: 20px;
-}
-
-.mb-\[30px\] {
-  margin-bottom: 30px;
 }
 
 .mb-\[25px\] {
@@ -699,44 +662,28 @@ video {
   margin-top: 1rem;
 }
 
-.mb-6 {
-  margin-bottom: 1.5rem;
-}
-
 .mb-8 {
   margin-bottom: 2rem;
-}
-
-.mr-4 {
-  margin-right: 1rem;
-}
-
-.mr-3 {
-  margin-right: 0.75rem;
 }
 
 .mb-5 {
   margin-bottom: 1.25rem;
 }
 
-.mr-\[25px\] {
-  margin-right: 25px;
-}
-
-.mr-\[15px\] {
-  margin-right: 15px;
-}
-
-.mr-\[20px\] {
-  margin-right: 20px;
+.mr-3 {
+  margin-right: 0.75rem;
 }
 
 .mb-7 {
   margin-bottom: 1.75rem;
 }
 
-.mt-6 {
-  margin-top: 1.5rem;
+.mr-\[20px\] {
+  margin-right: 20px;
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem;
 }
 
 .block {
@@ -747,150 +694,70 @@ video {
   display: flex;
 }
 
-.h-\[auto\] {
-  height: auto;
-}
-
 .h-\[100px\] {
   height: 100px;
-}
-
-.h-\[50px\] {
-  height: 50px;
-}
-
-.h-\[30px\] {
-  height: 30px;
-}
-
-.h-\[20px\] {
-  height: 20px;
-}
-
-.h-\[25px\] {
-  height: 25px;
-}
-
-.h-\[22px\] {
-  height: 22px;
 }
 
 .h-\[21px\] {
   height: 21px;
 }
 
-.h-auto {
-  height: auto;
-}
-
-.h-\[40px\] {
-  height: 40px;
-}
-
-.h-\[45px\] {
-  height: 45px;
-}
-
-.h-\[120px\] {
-  height: 120px;
-}
-
-.h-\[110px\] {
-  height: 110px;
-}
-
-.h-\[300px\] {
-  height: 300px;
-}
-
-.h-\[400px\] {
-  height: 400px;
-}
-
-.h-\[450px\] {
-  height: 450px;
-}
-
-.h-\[420px\] {
-  height: 420px;
-}
-
-.h-\[80px\] {
-  height: 80px;
-}
-
-.h-\[90px\] {
-  height: 90px;
-}
-
 .h-full {
   height: 100%;
-}
-
-.h-\[100\%\] {
-  height: 100%;
-}
-
-.h-\[fit-content\] {
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
-  height: fit-content;
-}
-
-.h-\[2px\] {
-  height: 2px;
-}
-
-.h-\[1px\] {
-  height: 1px;
-}
-
-.h-\[3px\] {
-  height: 3px;
 }
 
 .h-\[4px\] {
   height: 4px;
 }
 
-.h-\[200px\] {
-  height: 200px;
+.h-\[20px\] {
+  height: 20px;
 }
 
-.h-\[250px\] {
-  height: 250px;
-}
-
-.h-\[220px\] {
-  height: 220px;
+.h-\[45px\] {
+  height: 45px;
 }
 
 .h-\[240px\] {
   height: 240px;
 }
 
-.h-\[10px\] {
-  height: 10px;
-}
-
-.h-\[60\%\] {
-  height: 60%;
-}
-
 .h-\[65\%\] {
   height: 65%;
 }
 
+.h-auto {
+  height: auto;
+}
+
+.h-\[100\%\] {
+  height: 100%;
+}
+
+.h-\[1px\] {
+  height: 1px;
+}
+
+.h-\[40px\] {
+  height: 40px;
+}
+
+.h-\[50px\] {
+  height: 50px;
+}
+
+.min-h-\[100vh\] {
+  min-height: 100vh;
+}
+
+.w-\[fit-content\] {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
 .w-full {
   width: 100%;
-}
-
-.w-\[120px\] {
-  width: 120px;
-}
-
-.w-\[150px\] {
-  width: 150px;
 }
 
 .w-\[140px\] {
@@ -901,130 +768,68 @@ video {
   width: 20px;
 }
 
-.w-\[30px\] {
-  width: 30px;
-}
-
-.w-\[50px\] {
-  width: 50px;
-}
-
-.w-\[40px\] {
-  width: 40px;
-}
-
 .w-\[45px\] {
   width: 45px;
-}
-
-.w-1\/2 {
-  width: 50%;
-}
-
-.w-auto {
-  width: auto;
-}
-
-.w-\[100px\] {
-  width: 100px;
-}
-
-.w-\[80px\] {
-  width: 80px;
-}
-
-.w-\[90px\] {
-  width: 90px;
-}
-
-.w-\[45\%\] {
-  width: 45%;
-}
-
-.w-1\/4 {
-  width: 25%;
-}
-
-.w-\[50\%\] {
-  width: 50%;
-}
-
-.w-\[25\%\] {
-  width: 25%;
-}
-
-.w-\[23\%\] {
-  width: 23%;
-}
-
-.w-\[20\%\] {
-  width: 20%;
-}
-
-.w-\[21\%\] {
-  width: 21%;
-}
-
-.w-\[20\.5\%\] {
-  width: 20.5%;
-}
-
-.w-\[60px\] {
-  width: 60px;
-}
-
-.w-1\/3 {
-  width: 33.333333%;
-}
-
-.w-2\/3 {
-  width: 66.666667%;
-}
-
-.w-\[70\%\] {
-  width: 70%;
-}
-
-.w-\[60\%\] {
-  width: 60%;
-}
-
-.w-\[fit-content\] {
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-}
-
-.w-\[200px\] {
-  width: 200px;
-}
-
-.w-\[250px\] {
-  width: 250px;
-}
-
-.w-\[350px\] {
-  width: 350px;
-}
-
-.w-\[300px\] {
-  width: 300px;
 }
 
 .w-\[320px\] {
   width: 320px;
 }
 
-.translate-y-\[50\%\] {
-  --tw-translate-y: 50%;
-  -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-          transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+.w-\[45\%\] {
+  width: 45%;
 }
 
-.translate-y-\[100\%\] {
-  --tw-translate-y: 100%;
-  -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-          transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+.w-\[20\.5\%\] {
+  width: 20.5%;
+}
+
+.w-1\/2 {
+  width: 50%;
+}
+
+.w-\[60px\] {
+  width: 60px;
+}
+
+.w-\[150px\] {
+  width: 150px;
+}
+
+.w-1\/3 {
+  width: 33.333333%;
+}
+
+.w-\[60\%\] {
+  width: 60%;
+}
+
+.w-\[400px\] {
+  width: 400px;
+}
+
+.w-\[500px\] {
+  width: 500px;
+}
+
+.w-\[450px\] {
+  width: 450px;
+}
+
+.w-\[40px\] {
+  width: 40px;
+}
+
+.w-\[50px\] {
+  width: 50px;
+}
+
+.w-\[18\%\] {
+  width: 18%;
+}
+
+.w-\[16\%\] {
+  width: 16%;
 }
 
 .cursor-pointer {
@@ -1043,20 +848,8 @@ video {
   justify-content: space-between;
 }
 
-.gap-5 {
-  gap: 1.25rem;
-}
-
-.gap-6 {
-  gap: 1.5rem;
-}
-
 .gap-7 {
   gap: 1.75rem;
-}
-
-.gap-\[80px\] {
-  gap: 80px;
 }
 
 .gap-\[100px\] {
@@ -1067,58 +860,40 @@ video {
   gap: 25px;
 }
 
-.rounded-lg {
-  border-radius: 0.5rem;
+.rounded-full {
+  border-radius: 9999px;
 }
 
-.rounded-xl {
-  border-radius: 0.75rem;
+.rounded-lg {
+  border-radius: 0.5rem;
 }
 
 .rounded-2xl {
   border-radius: 1rem;
 }
 
+.rounded-xl {
+  border-radius: 0.75rem;
+}
+
 .rounded-md {
   border-radius: 0.375rem;
-}
-
-.rounded-full {
-  border-radius: 9999px;
-}
-
-.border {
-  border-width: 1px;
-}
-
-.border-\[2px\] {
-  border-width: 2px;
-}
-
-.border-\[0px\] {
-  border-width: 0px;
 }
 
 .border-\[3px\] {
   border-width: 3px;
 }
 
+.border-\[0px\] {
+  border-width: 0px;
+}
+
+.border {
+  border-width: 1px;
+}
+
 .border-b-\[2px\] {
   border-bottom-width: 2px;
-}
-
-.border-b {
-  border-bottom-width: 1px;
-}
-
-.border-slate-300 {
-  --tw-border-opacity: 1;
-  border-color: rgb(203 213 225 / var(--tw-border-opacity));
-}
-
-.border-slate-200 {
-  --tw-border-opacity: 1;
-  border-color: rgb(226 232 240 / var(--tw-border-opacity));
 }
 
 .border-slate-100 {
@@ -1131,24 +906,19 @@ video {
   border-color: rgb(255 125 26 / var(--tw-border-opacity));
 }
 
-.bg-lime-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(132 204 22 / var(--tw-bg-opacity));
+.border-slate-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(226 232 240 / var(--tw-border-opacity));
 }
 
-.bg-slate-600 {
+.bg-\[\#ff7d1a\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(71 85 105 / var(--tw-bg-opacity));
+  background-color: rgb(255 125 26 / var(--tw-bg-opacity));
 }
 
-.bg-red-300 {
+.bg-white {
   --tw-bg-opacity: 1;
-  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
-}
-
-.bg-slate-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(203 213 225 / var(--tw-bg-opacity));
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#ffede0\] {
@@ -1161,50 +931,25 @@ video {
   background-color: rgb(182 188 200 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#ff7d1a\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 125 26 / var(--tw-bg-opacity));
-}
-
 .bg-\[\#f7f8fd\] {
   --tw-bg-opacity: 1;
   background-color: rgb(247 248 253 / var(--tw-bg-opacity));
 }
 
-.bg-red-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
+.bg-black\/50 {
+  background-color: rgb(0 0 0 / 0.5);
 }
 
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+.bg-black\/70 {
+  background-color: rgb(0 0 0 / 0.7);
 }
 
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.p-1 {
-  padding: 0.25rem;
-}
-
-.p-2 {
-  padding: 0.5rem;
-}
-
-.p-3 {
-  padding: 0.75rem;
+.bg-black\/80 {
+  background-color: rgb(0 0 0 / 0.8);
 }
 
 .p-5 {
   padding: 1.25rem;
-}
-
-.px-\[120px\] {
-  padding-left: 120px;
-  padding-right: 120px;
 }
 
 .px-\[130px\] {
@@ -1212,64 +957,9 @@ video {
   padding-right: 130px;
 }
 
-.py-\[50px\] {
-  padding-top: 50px;
-  padding-bottom: 50px;
-}
-
-.py-\[40px\] {
-  padding-top: 40px;
-  padding-bottom: 40px;
-}
-
-.py-\[30px\] {
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-
-.py-\[35px\] {
-  padding-top: 35px;
-  padding-bottom: 35px;
-}
-
-.px-\[50px\] {
-  padding-left: 50px;
-  padding-right: 50px;
-}
-
-.px-\[80px\] {
-  padding-left: 80px;
-  padding-right: 80px;
-}
-
 .px-\[70px\] {
   padding-left: 70px;
   padding-right: 70px;
-}
-
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
-
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
-.py-\[4px\] {
-  padding-top: 4px;
-  padding-bottom: 4px;
-}
-
-.px-\[5px\] {
-  padding-left: 5px;
-  padding-right: 5px;
-}
-
-.py-\[2px\] {
-  padding-top: 2px;
-  padding-bottom: 2px;
 }
 
 .py-\[1px\] {
@@ -1282,36 +972,6 @@ video {
   padding-right: 6px;
 }
 
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-
-.py-\[5px\] {
-  padding-top: 5px;
-  padding-bottom: 5px;
-}
-
-.py-\[10px\] {
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-
-.py-\[20px\] {
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-
-.py-\[25px\] {
-  padding-top: 25px;
-  padding-bottom: 25px;
-}
-
 .py-\[22px\] {
   padding-top: 22px;
   padding-bottom: 22px;
@@ -1322,36 +982,34 @@ video {
   padding-bottom: 18px;
 }
 
-.pt-\[80px\] {
-  padding-top: 80px;
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
-.text-center {
-  text-align: center;
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+.pt-\[80px\] {
+  padding-top: 80px;
 }
 
 .font-kumbh {
   font-family: 'Kumbh Sans', sans-serif;
 }
 
-.text-\[0\.85rem\] {
-  font-size: 0.85rem;
+.text-\[0\.75rem\] {
+  font-size: 0.75rem;
 }
 
 .text-\[1rem\] {
   font-size: 1rem;
 }
 
-.text-\[0\.75rem\] {
-  font-size: 0.75rem;
-}
-
-.text-\[2rem\] {
-  font-size: 2rem;
-}
-
-.text-\[3rem\] {
-  font-size: 3rem;
+.text-\[0\.85rem\] {
+  font-size: 0.85rem;
 }
 
 .text-\[2\.75rem\] {
@@ -1374,46 +1032,12 @@ video {
   font-weight: 700;
 }
 
-.leading-3 {
-  line-height: .75rem;
-}
-
-.leading-5 {
-  line-height: 1.25rem;
-}
-
-.leading-8 {
-  line-height: 2rem;
-}
-
-.leading-10 {
-  line-height: 2.5rem;
-}
-
-.leading-\[30px\] {
-  line-height: 30px;
-}
-
-.leading-\[50px\] {
-  line-height: 50px;
-}
-
 .leading-\[45px\] {
   line-height: 45px;
 }
 
 .tracking-widest {
   letter-spacing: 0.1em;
-}
-
-.text-\[\#f7f8fd\] {
-  --tw-text-opacity: 1;
-  color: rgb(247 248 253 / var(--tw-text-opacity));
-}
-
-.text-\[\#b6bcc8\] {
-  --tw-text-opacity: 1;
-  color: rgb(182 188 200 / var(--tw-text-opacity));
 }
 
 .text-\[\#68707d\] {
@@ -1431,38 +1055,14 @@ video {
   color: rgb(29 32 37 / var(--tw-text-opacity));
 }
 
+.text-\[\#b6bcc8\] {
+  --tw-text-opacity: 1;
+  color: rgb(182 188 200 / var(--tw-text-opacity));
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.underline {
-  -webkit-text-decoration-line: underline;
-          text-decoration-line: underline;
-}
-
-.underline-offset-1 {
-  text-underline-offset: 1px;
-}
-
-.underline-offset-\[-5px\] {
-  text-underline-offset: -5px;
-}
-
-.opacity-50 {
-  opacity: 0.5;
-}
-
-.opacity-70 {
-  opacity: 0.7;
-}
-
-.opacity-20 {
-  opacity: 0.2;
-}
-
-.opacity-30 {
-  opacity: 0.3;
 }
 
 .opacity-40 {
@@ -1473,56 +1073,21 @@ video {
   opacity: 1;
 }
 
-.shadow-xl {
-  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-lg {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .shadow-2xl {
   --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
   --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-orange-500\/50 {
-  --tw-shadow-color: rgb(249 115 22 / 0.5);
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.shadow-orange-500\/20 {
-  --tw-shadow-color: rgb(249 115 22 / 0.2);
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.shadow-orange-500\/40 {
-  --tw-shadow-color: rgb(249 115 22 / 0.4);
-  --tw-shadow: var(--tw-shadow-colored);
+.shadow-xl {
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .shadow-orange-500\/30 {
   --tw-shadow-color: rgb(249 115 22 / 0.3);
   --tw-shadow: var(--tw-shadow-colored);
-}
-
-.hover\:scale-50:hover {
-  --tw-scale-x: .5;
-  --tw-scale-y: .5;
-  -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-          transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:scale-150:hover {
-  --tw-scale-x: 1.5;
-  --tw-scale-y: 1.5;
-  -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-          transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .hover\:scale-\[1\.2\]:hover {
@@ -1534,6 +1099,10 @@ video {
 
 .hover\:border-\[2px\]:hover {
   border-width: 2px;
+}
+
+.hover\:fill-\[\#ff7d1a\]:hover {
+  fill: #ff7d1a;
 }
 
 .hover\:opacity-50:hover {
