--- a/public/output.css
+++ b/public/output.css
@@ -585,26 +585,6 @@ video {
   left: 0px;
 }
 
-.top-\[100px\] {
-  top: 100px;
-}
-
-.right-\[50\%\] {
-  right: 50%;
-}
-
-.top-\[60px\] {
-  top: 60px;
-}
-
-.top-\[50\%\] {
-  top: 50%;
-}
-
-.right-0 {
-  right: 0px;
-}
-
 .top-\[40\%\] {
   top: 40%;
 }
@@ -615,6 +595,30 @@ video {
 
 .right-\[-20px\] {
   right: -20px;
+}
+
+.top-\[-10px\] {
+  top: -10px;
+}
+
+.right-\[-5px\] {
+  right: -5px;
+}
+
+.top-\[-7px\] {
+  top: -7px;
+}
+
+.right-\[-6px\] {
+  right: -6px;
+}
+
+.right-\[-7px\] {
+  right: -7px;
+}
+
+.right-0 {
+  right: 0px;
 }
 
 .z-20 {
@@ -682,8 +686,20 @@ video {
   margin-right: 20px;
 }
 
-.mb-10 {
-  margin-bottom: 2.5rem;
+.mb-\[15px\] {
+  margin-bottom: 15px;
+}
+
+.mb-\[20px\] {
+  margin-bottom: 20px;
+}
+
+.mt-\[10px\] {
+  margin-top: 10px;
+}
+
+.mt-\[5px\] {
+  margin-top: 5px;
 }
 
 .block {
@@ -738,12 +754,20 @@ video {
   height: 1px;
 }
 
-.h-\[40px\] {
-  height: 40px;
-}
-
 .h-\[50px\] {
   height: 50px;
+}
+
+.h-5 {
+  height: 1.25rem;
+}
+
+.h-3 {
+  height: 0.75rem;
+}
+
+.h-4 {
+  height: 1rem;
 }
 
 .min-h-\[100vh\] {
@@ -804,32 +828,36 @@ video {
   width: 60%;
 }
 
-.w-\[400px\] {
-  width: 400px;
-}
-
-.w-\[500px\] {
-  width: 500px;
-}
-
 .w-\[450px\] {
   width: 450px;
-}
-
-.w-\[40px\] {
-  width: 40px;
 }
 
 .w-\[50px\] {
   width: 50px;
 }
 
-.w-\[18\%\] {
-  width: 18%;
-}
-
 .w-\[16\%\] {
   width: 16%;
+}
+
+.w-\[300px\] {
+  width: 300px;
+}
+
+.w-\[80px\] {
+  width: 80px;
+}
+
+.w-\[310px\] {
+  width: 310px;
+}
+
+.w-5 {
+  width: 1.25rem;
+}
+
+.w-3 {
+  width: 0.75rem;
 }
 
 .cursor-pointer {
@@ -858,6 +886,10 @@ video {
 
 .gap-\[25px\] {
   gap: 25px;
+}
+
+.gap-\[15px\] {
+  gap: 15px;
 }
 
 .rounded-full {
@@ -936,20 +968,26 @@ video {
   background-color: rgb(247 248 253 / var(--tw-bg-opacity));
 }
 
-.bg-black\/50 {
-  background-color: rgb(0 0 0 / 0.5);
-}
-
-.bg-black\/70 {
-  background-color: rgb(0 0 0 / 0.7);
-}
-
 .bg-black\/80 {
   background-color: rgb(0 0 0 / 0.8);
 }
 
+.bg-red-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
+}
+
+.bg-green-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(74 222 128 / var(--tw-bg-opacity));
+}
+
 .p-5 {
   padding: 1.25rem;
+}
+
+.p-\[20px\] {
+  padding: 20px;
 }
 
 .px-\[130px\] {
@@ -992,6 +1030,41 @@ video {
   padding-right: 1.5rem;
 }
 
+.px-\[2px\] {
+  padding-left: 2px;
+  padding-right: 2px;
+}
+
+.px-\[5px\] {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.px-\[10px\] {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.px-\[7px\] {
+  padding-left: 7px;
+  padding-right: 7px;
+}
+
+.px-\[8px\] {
+  padding-left: 8px;
+  padding-right: 8px;
+}
+
+.py-\[0px\] {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
 .pt-\[80px\] {
   padding-top: 80px;
 }
@@ -1022,6 +1095,42 @@ video {
 
 .text-\[0\.9rem\] {
   font-size: 0.9rem;
+}
+
+.text-\[0\.5rem\] {
+  font-size: 0.5rem;
+}
+
+.text-\[0\.4rem\] {
+  font-size: 0.4rem;
+}
+
+.text-\[0\.45rem\] {
+  font-size: 0.45rem;
+}
+
+.text-\[1\.15rem\] {
+  font-size: 1.15rem;
+}
+
+.text-\[1\.1rem\] {
+  font-size: 1.1rem;
+}
+
+.text-\[1\.05rem\] {
+  font-size: 1.05rem;
+}
+
+.text-\[1\.02rem\] {
+  font-size: 1.02rem;
+}
+
+.text-\[0\.8remrem\] {
+  font-size: 0.8remrem;
+}
+
+.text-\[0\.8rem\] {
+  font-size: 0.8rem;
 }
 
 .font-\[400\] {
@@ -1065,6 +1174,11 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
 .opacity-40 {
   opacity: 0.4;
 }
@@ -1099,10 +1213,6 @@ video {
 
 .hover\:border-\[2px\]:hover {
   border-width: 2px;
-}
-
-.hover\:fill-\[\#ff7d1a\]:hover {
-  fill: #ff7d1a;
 }
 
 .hover\:opacity-50:hover {
