--- a/public/output.css
+++ b/public/output.css
@@ -621,6 +621,10 @@ video {
   right: 0px;
 }
 
+.bottom-\[2px\] {
+  bottom: 2px;
+}
+
 .z-20 {
   z-index: 20;
 }
@@ -702,12 +706,32 @@ video {
   margin-top: 5px;
 }
 
+.mr-\[30px\] {
+  margin-right: 30px;
+}
+
+.mr-\[25px\] {
+  margin-right: 25px;
+}
+
+.mr-5 {
+  margin-right: 1.25rem;
+}
+
+.mr-4 {
+  margin-right: 1rem;
+}
+
 .block {
   display: block;
 }
 
 .flex {
   display: flex;
+}
+
+.hidden {
+  display: none;
 }
 
 .h-\[100px\] {
@@ -768,6 +792,30 @@ video {
 
 .h-4 {
   height: 1rem;
+}
+
+.h-\[8px\] {
+  height: 8px;
+}
+
+.h-\[80px\] {
+  height: 80px;
+}
+
+.h-\[18px\] {
+  height: 18px;
+}
+
+.h-\[23px\] {
+  height: 23px;
+}
+
+.h-\[25px\] {
+  height: 25px;
+}
+
+.h-\[35px\] {
+  height: 35px;
 }
 
 .min-h-\[100vh\] {
@@ -860,8 +908,24 @@ video {
   width: 0.75rem;
 }
 
+.w-\[25px\] {
+  width: 25px;
+}
+
+.w-\[145px\] {
+  width: 145px;
+}
+
+.w-\[35px\] {
+  width: 35px;
+}
+
 .cursor-pointer {
   cursor: pointer;
+}
+
+.items-start {
+  align-items: flex-start;
 }
 
 .items-center {
@@ -890,6 +954,10 @@ video {
 
 .gap-\[15px\] {
   gap: 15px;
+}
+
+.gap-\[20px\] {
+  gap: 20px;
 }
 
 .rounded-full {
@@ -982,6 +1050,16 @@ video {
   background-color: rgb(74 222 128 / var(--tw-bg-opacity));
 }
 
+.bg-red-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
+}
+
+.bg-slate-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+}
+
 .p-5 {
   padding: 1.25rem;
 }
@@ -1065,8 +1143,22 @@ video {
   padding-bottom: 0.75rem;
 }
 
+.px-\[20px\] {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.px-\[0px\] {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
 .pt-\[80px\] {
   padding-top: 80px;
+}
+
+.pt-\[0px\] {
+  padding-top: 0px;
 }
 
 .font-kumbh {
@@ -1211,10 +1303,64 @@ video {
           transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.hover\:scale-\[1\.3\]:hover {
+  --tw-scale-x: 1.3;
+  --tw-scale-y: 1.3;
+  -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+          transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .hover\:border-\[2px\]:hover {
   border-width: 2px;
 }
 
 .hover\:opacity-50:hover {
   opacity: 0.5;
+}
+
+@media (min-width: 768px) {
+  .md\:px-\[130px\] {
+    padding-left: 130px;
+    padding-right: 130px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:flex {
+    display: flex;
+  }
+
+  .lg\:hidden {
+    display: none;
+  }
+
+  .lg\:w-\[45\%\] {
+    width: 45%;
+  }
+
+  .lg\:w-1\/2 {
+    width: 50%;
+  }
+
+  .lg\:gap-\[100px\] {
+    gap: 100px;
+  }
+
+  .lg\:rounded-2xl {
+    border-radius: 1rem;
+  }
+
+  .lg\:px-\[70px\] {
+    padding-left: 70px;
+    padding-right: 70px;
+  }
+
+  .lg\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .lg\:pt-\[80px\] {
+    padding-top: 80px;
+  }
 }
