--- a/public/output.css
+++ b/public/output.css
@@ -549,6 +549,35 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.slide {
+  -webkit-animation: slide 0.6s ease-out;
+          animation: slide 0.6s ease-out;
+}
+
+@-webkit-keyframes slide {
+  0% {
+    -webkit-transform: translateX(-200px);
+            transform: translateX(-200px)
+  }
+
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0)
+  }
+}
+
+@keyframes slide {
+  0% {
+    -webkit-transform: translateX(-200px);
+            transform: translateX(-200px)
+  }
+
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0)
+  }
+}
+
 .fixed {
   position: fixed;
 }
@@ -597,32 +626,16 @@ video {
   bottom: 2px;
 }
 
-.bottom-\[11px\] {
-  bottom: 11px;
+.top-\[30px\] {
+  top: 30px;
+}
+
+.left-\[30px\] {
+  left: 30px;
 }
 
 .top-\[40\%\] {
   top: 40%;
-}
-
-.left-\[-20px\] {
-  left: -20px;
-}
-
-.right-\[-20px\] {
-  right: -20px;
-}
-
-.top-\[20px\] {
-  top: 20px;
-}
-
-.top-\[10px\] {
-  top: 10px;
-}
-
-.top-\[15px\] {
-  top: 15px;
 }
 
 .left-\[10px\] {
@@ -633,36 +646,36 @@ video {
   right: 10px;
 }
 
-.right-\[-50\%\] {
-  right: -50%;
+.top-\[15px\] {
+  top: 15px;
 }
 
-.top-\[80px\] {
-  top: 80px;
+.bottom-\[11px\] {
+  bottom: 11px;
 }
 
-.right-\[50\%\] {
-  right: 50%;
+.left-\[-20px\] {
+  left: -20px;
 }
 
-.right-0 {
-  right: 0px;
+.right-\[-20px\] {
+  right: -20px;
 }
 
-.z-20 {
-  z-index: 20;
+.z-30 {
+  z-index: 30;
 }
 
 .z-50 {
   z-index: 50;
 }
 
-.z-\[100\] {
-  z-index: 100;
+.z-20 {
+  z-index: 20;
 }
 
-.z-30 {
-  z-index: 30;
+.z-\[100\] {
+  z-index: 100;
 }
 
 .float-right {
@@ -674,8 +687,17 @@ video {
   margin-right: auto;
 }
 
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 .mt-6 {
   margin-top: 1.5rem;
+}
+
+.mb-3 {
+  margin-bottom: 0.75rem;
 }
 
 .mr-\[8\%\] {
@@ -728,18 +750,6 @@ video {
 
 .mr-\[20px\] {
   margin-right: 20px;
-}
-
-.mb-\[30px\] {
-  margin-bottom: 30px;
-}
-
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
-
-.mb-3 {
-  margin-bottom: 0.75rem;
 }
 
 .block {
@@ -810,8 +820,20 @@ video {
   height: 35px;
 }
 
+.h-\[100vh\] {
+  height: 100vh;
+}
+
+.h-5 {
+  height: 1.25rem;
+}
+
 .h-\[320px\] {
   height: 320px;
+}
+
+.h-\[50px\] {
+  height: 50px;
 }
 
 .h-\[100\%\] {
@@ -820,18 +842,6 @@ video {
 
 .h-\[1px\] {
   height: 1px;
-}
-
-.h-\[50px\] {
-  height: 50px;
-}
-
-.h-\[40px\] {
-  height: 40px;
-}
-
-.h-5 {
-  height: 1.25rem;
 }
 
 .min-h-\[100vh\] {
@@ -888,40 +898,8 @@ video {
   width: 35px;
 }
 
-.w-\[20\.5\%\] {
-  width: 20.5%;
-}
-
-.w-\[60px\] {
-  width: 60px;
-}
-
-.w-\[150px\] {
-  width: 150px;
-}
-
-.w-1\/3 {
-  width: 33.333333%;
-}
-
-.w-\[60\%\] {
-  width: 60%;
-}
-
-.w-\[450px\] {
-  width: 450px;
-}
-
-.w-\[16\%\] {
-  width: 16%;
-}
-
-.w-\[40px\] {
-  width: 40px;
-}
-
-.w-\[85\%\] {
-  width: 85%;
+.w-\[65\%\] {
+  width: 65%;
 }
 
 .w-\[95\%\] {
@@ -932,24 +910,34 @@ video {
   width: 1rem;
 }
 
+.w-\[20\.5\%\] {
+  width: 20.5%;
+}
+
+.w-\[60px\] {
+  width: 60px;
+}
+
+.w-1\/3 {
+  width: 33.333333%;
+}
+
+.w-\[450px\] {
+  width: 450px;
+}
+
+.w-\[16\%\] {
+  width: 16%;
+}
+
 .translate-x-\[-50\%\] {
   --tw-translate-x: -50%;
   -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
           transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.translate-x-\[50\%\] {
-  --tw-translate-x: 50%;
-  -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-          transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .cursor-pointer {
   cursor: pointer;
-}
-
-.items-end {
-  align-items: flex-end;
 }
 
 .items-center {
@@ -978,14 +966,6 @@ video {
 
 .gap-\[25px\] {
   gap: 25px;
-}
-
-.overflow-y-scroll {
-  overflow-y: scroll;
-}
-
-.overscroll-y-auto {
-  overscroll-behavior-y: auto;
 }
 
 .overscroll-y-contain {
@@ -1053,9 +1033,8 @@ video {
   background-color: rgb(255 125 26 / var(--tw-bg-opacity));
 }
 
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+.bg-black\/80 {
+  background-color: rgb(0 0 0 / 0.8);
 }
 
 .bg-\[\#ffede0\] {
@@ -1073,29 +1052,12 @@ video {
   background-color: rgb(247 248 253 / var(--tw-bg-opacity));
 }
 
-.bg-black\/80 {
-  background-color: rgb(0 0 0 / 0.8);
-}
-
-.bg-blue-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
-}
-
 .bg-black\/90 {
   background-color: rgb(0 0 0 / 0.9);
 }
 
 .object-cover {
   object-fit: cover;
-}
-
-.object-top {
-  object-position: top;
-}
-
-.object-center {
-  object-position: center;
 }
 
 .p-5 {
@@ -1146,9 +1108,9 @@ video {
   padding-right: 6px;
 }
 
-.py-\[22px\] {
-  padding-top: 22px;
-  padding-bottom: 22px;
+.py-\[25px\] {
+  padding-top: 25px;
+  padding-bottom: 25px;
 }
 
 .py-\[18px\] {
@@ -1156,23 +1118,21 @@ video {
   padding-bottom: 18px;
 }
 
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
 
-.py-\[25px\] {
-  padding-top: 25px;
-  padding-bottom: 25px;
-}
-
 .pt-\[80px\] {
   padding-top: 80px;
+}
+
+.pl-\[30px\] {
+  padding-left: 30px;
+}
+
+.pt-\[100px\] {
+  padding-top: 100px;
 }
 
 .pt-\[0px\] {
@@ -1203,20 +1163,20 @@ video {
   font-size: 0.9rem;
 }
 
+.text-\[0\.7rem\] {
+  font-size: 0.7rem;
+}
+
+.text-\[1\.25rem\] {
+  font-size: 1.25rem;
+}
+
 .text-\[2\.25rem\] {
   font-size: 2.25rem;
 }
 
 .text-\[1\.85rem\] {
   font-size: 1.85rem;
-}
-
-.text-\[0\.6rem\] {
-  font-size: 0.6rem;
-}
-
-.text-\[0\.7rem\] {
-  font-size: 0.7rem;
 }
 
 .font-\[400\] {
@@ -1355,10 +1315,6 @@ video {
     width: 60%;
   }
 
-  .lg\:w-\[320px\] {
-    width: 320px;
-  }
-
   .lg\:gap-\[100px\] {
     gap: 100px;
   }
@@ -1386,14 +1342,14 @@ video {
     padding-right: 0px;
   }
 
-  .lg\:py-2 {
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-  }
-
   .lg\:py-\[22px\] {
     padding-top: 22px;
     padding-bottom: 22px;
+  }
+
+  .lg\:py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
   }
 
   .lg\:pt-\[100px\] {
