--- a/public/output.css
+++ b/public/output.css
@@ -557,24 +557,24 @@ video {
 @-webkit-keyframes slide {
   0% {
     -webkit-transform: translateX(-200px);
-            transform: translateX(-200px)
+            transform: translateX(-200px);
   }
 
   100% {
-    -webkit-transform: translateX(0);
-            transform: translateX(0)
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
   }
 }
 
 @keyframes slide {
   0% {
     -webkit-transform: translateX(-200px);
-            transform: translateX(-200px)
+            transform: translateX(-200px);
   }
 
   100% {
-    -webkit-transform: translateX(0);
-            transform: translateX(0)
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
   }
 }
 
